# cppGCN

./: CMakeLists.txt  README.md
include/: layer.h  model.h
src/: layer.cpp  model.cpp
